--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 :root {
-  --color-main: rgb(127, 103, 248);
+  --color-main: #7f67f8;
   --color-black: #212327;
   --color-grey: #303236;
   --color-white: #fff;
