--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
   background-color: var(--color-grey);
   border: none;
   outline: none;
-  box-shadow: var(--box-shadow-dark);
+  box-shadow: var(--box-shadow-light);
 }
 
 .block {
