--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
+
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 html {
@@ -18,11 +26,6 @@ html {
 
   --box-shadow-dark: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   --box-shadow-light: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-}
-
-::selection {
-  color: none;
-  background-color: none;
 }
 
 body {
